overflow fix

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -255,7 +255,8 @@ body
         opacity: .8
     .copy
       float: left
-      overflow: auto
+      overflow: scroll
+      -webkit-overflow-scrolling: touch
       position: fixed
       left: 0
       height: 100%
